fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-ceph-rgw-mesh.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ceph-rgw-mesh
spec:
  selector:
    matchLabels:
      app: ceph-rgw-gateway
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/temple-of-time/sa/nextcloud-postgres
              - cluster.local/ns/temple-of-time/sa/appflowy-cloud
              - cluster.local/ns/hyrule-castle/sa/gitlab-postgresql
              - cluster.local/ns/hyrule-castle/sa/gitlab-sidekiq
              - cluster.local/ns/hyrule-castle/sa/gitlab-webservice
              - cluster.local/ns/hyrule-castle/sa/gitlab-toolbox
              - cluster.local/ns/hyrule-castle/sa/gitlab-registry
              - cluster.local/ns/hyrule-castle/sa/harbor-registry
              - cluster.local/ns/hyrule-castle/sa/harbor-core
              - cluster.local/ns/hyrule-castle/sa/harbor-jobservice
              - cluster.local/ns/gossip-stone/sa/loki
      to:
        - operation:
            ports: ["8443"]
