fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-cnpg-instance-callback.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-cnpg-instance-callback
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/gossip-stone/sa/gatus-postgres
              - cluster.local/ns/gossip-stone/sa/grafana-postgres
              - cluster.local/ns/hyrule-castle/sa/calcom-postgres
              - cluster.local/ns/hyrule-castle/sa/gitlab-postgresql
              - cluster.local/ns/hyrule-castle/sa/harbor-postgres
              - cluster.local/ns/lost-woods/sa/homarr-postgres
              - cluster.local/ns/temple-of-time/sa/appflowy-postgres
              - cluster.local/ns/temple-of-time/sa/nextcloud-postgres
              - cluster.local/ns/temple-of-time/sa/open-webui-postgres
              - cluster.local/ns/zeldas-lullaby/sa/netbird-postgres
              - cluster.local/ns/zeldas-lullaby/sa/vaultwarden-postgres
              - cluster.local/ns/zeldas-lullaby/sa/zitadel-postgres
      to:
        - operation:
            ports: ["9443"]
