fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-cnpg-to-barman-plugin.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-cnpg-to-barman-plugin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: plugin-barman-cloud
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/gorons-bracelet/sa/cloudnative-pg
      to:
        - operation:
            ports: ["9090"]
