fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-harbor-to-rgw.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-harbor-to-rgw
spec:
  selector:
    matchLabels:
      app: ceph-rgw
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/hyrule-castle/sa/harbor-registry"
              - "cluster.local/ns/hyrule-castle/sa/harbor-core"
              - "cluster.local/ns/hyrule-castle/sa/harbor-jobservice"
      to:
        - operation:
            ports: ["8080"]
