fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-intra-namespace.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-intra-namespace
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["gorons-bracelet"]
