fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-loki-to-rgw.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-loki-to-rgw
spec:
  selector:
    matchLabels:
      app: ceph-rgw
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/gossip-stone/sa/loki"
      to:
        - operation:
            ports: ["8080"]
