fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-matrix-synapse-to-rgw.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-matrix-synapse-to-rgw
spec:
  selector:
    matchLabels:
      app: ceph-rgw
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/temple-of-time/sa/matrix-synapse"
      to:
        - operation:
            ports: ["8080"]
