fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-rgw-admin-jobs.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-rgw-admin-jobs
spec:
  selector:
    matchLabels:
      app: ceph-rgw
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/gorons-bracelet/sa/rgw-admin"
      to:
        - operation:
            ports: ["8080"]
