fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-webhook-cnpg.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-cnpg-webhook-apiserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  action: ALLOW
  rules:
    - from:
        - source:
            notPrincipals:
              - cluster.local/ns/*/sa/*
      to:
        - operation:
            ports: ["443", "9443"]
