fluxcd/infrastructure/configs/overlays/production/istio-policies/gorons-bracelet/allow-webhook-mariadb-operator.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-mariadb-webhook-apiserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb-operator-webhook
  action: ALLOW
  rules:
    - from:
        - source:
            notPrincipals:
              - cluster.local/ns/*/sa/*
      to:
        - operation:
            ports: ["9443"]
